fix text alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -79,7 +79,7 @@ a {
   padding-bottom: 2%;
   width: 80%;
   margin: auto;
-  background-color: #0e86d4;
+  /*background-color: #0e86d4;*/
 }
 
 .main2 h3 {
